resolve #18 (#20)
* Squashed commit of the following:

commit edf23451e324c1cf0430ceec0fc61160b297f16d
Merge: 7efb69c 74eaadc
Author: Ana Carolina <121954394+Ana-CAS-Machado@users.noreply.github.com>
Date:   Wed Sep 20 13:18:16 2023 -0300

    Merge branch 'main' into 10-template-indice-noticias

commit 7efb69cba36bd0117d52c49686e8ac54b31d6687
Author: Ana Carolina Prefeitura <121954394+Ana-CAS-Machado@users.noreply.github.com>
Date:   Wed Sep 20 12:55:20 2023 -0300

    resolve #10

commit 9e7ce33e95be76c3d1a5955b11e960937ae37651
Author: Ana Carolina Prefeitura <121954394+Ana-CAS-Machado@users.noreply.github.com>
Date:   Wed Sep 20 10:14:54 2023 -0300

    Squashed commit of the following:

    commit bc0c1828e6d8d962971523ca035e6693808c0ecb
    Author: Ana Carolina <carol00_10@hotmail.com>
    Date:   Tue Sep 19 19:43:02 2023 -0300

        resolve #4

    commit 5583dca5f53d06cd9d8e238d96bb398be1efb091
    Author: Ana Carolina <carol00_10@hotmail.com>
    Date:   Tue Sep 19 16:47:20 2023 -0300

        Squashed commit of the following:

        commit d27d1ed99aec6687c97d8b1149938a395949640d
        Author: Ana Carolina <carol00_10@hotmail.com>
        Date:   Tue Sep 19 16:38:00 2023 -0300

            resolve #3

* resolve #18

--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -43,28 +43,14 @@ body.video cite { color: #fff; }
 
 /* Sistema SMAE
 ---------------------------------------------------------------------*/
-.homepage_smae { 
-    text-transform: uppercase; 
-    text-align: center; 
-    margin-top: 25px;
-    margin-bottom: 25px;
+.iconfont{
+    color: #f7c234;
 }
-.homepage_iframe_paragrafo{
-    position: relative;
+.iconfont:hover{
+    background-color: #f7c234;
+    color: #152741;
 }
 
-.paragrafo_homepage_smae{
-    font-size: 17px;
-    text-align: start;
-    margin-left: 20px;
-    margin-right: 20px;
-    //width: 500px;
-    //height: 500px;
-}
-.video_smae_pt{
-    text-align: center;
-    margin-top: 20px;
-}
 
 
 
@@ -285,7 +271,8 @@ body.video cite { color: #fff; }
     border-radius: 3px;
 }
 #up-to-top a:hover {
-    background: $grey-2;
+    color: #f7c234;
+    background: #152741;
 }
 
 
